--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@rocketseat/unform": "^1.6.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "add": "^2.0.6",
     "babel-plugin-root-import": "^6.5.0",
     "history": "^4.10.1",
     "polished": "^3.6.3",
@@ -15,7 +17,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "reactotron-react-js": "^3.3.7",
-    "styled-components": "^5.1.0"
+    "styled-components": "^5.1.0",
+    "yarn": "^1.22.4"
   },
   "scripts": {
     "start": "react-app-rewired start",
