--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-scripts": "3.4.1",
     "reactotron-react-js": "^3.3.7",
     "styled-components": "^5.1.0",
-    "yarn": "^1.22.4"
+    "yarn": "^1.22.4",
+    "yup": "^0.29.0"
   },
   "scripts": {
     "start": "react-app-rewired start",
