--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "add": "^2.0.6",
     "axios": "^0.19.2",
     "babel-plugin-root-import": "^6.5.0",
+    "date-fns": "^2.0.0-beta.5",
     "history": "^4.10.1",
     "immer": "^6.0.8",
     "polished": "^3.6.3",
